# cgs-stream-overlay-engine

./: .gitignore  Dockerfile  LICENSE  README.md  package.json  simple-srt-stream-server.sh
lib/: streamer.js
native/: Cargo.toml
native/src/: command.rs  event.rs  lib.rs  pipeline.rs
wpe-graphics-overlays/: package.json  server.js
wpe-graphics-overlays/public/: index.html
wpe-graphics-overlays/public/admin/: index.html
wpe-graphics-overlays/public/admin/templates/: badminton.tmpl.html  basketball.tmpl.html  boxing.tmpl.html  darts.tmpl.html  football.tmpl.html  general.tmpl.html  netball.tmpl.html  preview.tmpl.html  rollingText.tmpl.html  roses.tmpl.html  rugby.tmpl.html  swimming.tmpl.html  tennis.tmpl.html  waterpolo.tmpl.html
wpe-graphics-overlays/public/css/: rolling-text.css
wpe-graphics-overlays/public/js/: cg.js  dashboard.js
