[package]
name = "cgs-stream-overlay-engine"
version = "0.1.0"
authors = ["Philippe Normand <philn@igalia.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "cgs_stream_overlay_engine"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
glib = "0.10"
gstreamer = { version = "0.16", features = ["v1_16"] }
gstreamer-base = { version = "0.16", features = ["v1_16"] }
futures = "0.3"